# python-project-config

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
